--- a/myshop/src/app/components/products/products.component.html
+++ b/myshop/src/app/components/products/products.component.html
@@ -21,7 +21,7 @@
                     </ul>
                 </td>
                 <td>
-                    <button>Do koszyka</button>
+                    <button (click)="addToCart(product)">Do koszyka</button>
                 </td>
               </tr>
             </ng-container>
