--- a/myshop/src/app/components/admin/dashboard/dashboard.component.html
+++ b/myshop/src/app/components/admin/dashboard/dashboard.component.html
@@ -21,6 +21,7 @@
     <div class="content-container">
       <h2>Zamowienia</h2>
       <table>
+      <link rel="stylesheet" href="C:\Users\48537\Desktop\E_COMMERCE_FILIP_PELKOWSKI__26270\myshop\src\app\components\panel-top\panel-top.component.scss">
         <thead>
           <tr>
               <th>ID</th>
